--- a/src/pages/SettingsPage/SettingLeftSide.module.css
+++ b/src/pages/SettingsPage/SettingLeftSide.module.css
@@ -34,7 +34,7 @@ a {
   font-size: 25px;
 }
 
-li {
+.slsLi {
   border: solid white 1px;
   width: 175px;
   height: 40px;
